@@ -1,5 +1,8 @@
 2006-11-03  Dan Winship  <danw@novell.com>
 
+	* libsoup/soup-server.c (get_property): Fix leaks pointed out by
+	Paolo Borelli. #351500
+
 	* configure.in: Use pkgconfig to find gnutls. Remove old static
 	linking stuff that was only needed for rcd.
 
